<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="karol.androidappforarduino.MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
            app:layout_constraintHorizontal_bias="0.07" android:textStyle="bold" android:id="@+id/textView4"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connection_status"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.06" android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonOn" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView2" android:textStyle="bold" android:id="@+id/textView1"
            app:layout_constraintVertical_bias="0.437"/>
    <TextView
            android:layout_width="191dp"
            android:layout_height="22dp"
            android:text="@string/sensor"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.082" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonOn" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/radioGroup2" app:layout_constraintVertical_bias="0.904"
            android:textAllCaps="false" android:id="@+id/textView2" android:textStyle="bold"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/led"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/textView"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="31dp" app:layout_constraintRight_toLeftOf="@+id/buttonOn"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.307" android:textStyle="bold"/>
    <Button
            android:text="@string/off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonOFF" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp" app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.728" android:onClick="defaultMessage"/>
    <Button
            android:text="@string/on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonOn"
            app:layout_constraintRight_toLeftOf="@+id/buttonOFF" android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.875" android:onClick="defaultMessage"/>
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/buttonOFF" android:id="@+id/radioGroup2"
                app:layout_constraintVertical_bias="0.511" android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintHorizontal_bias="0.0">
        <RadioButton android:id="@+id/radio1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:onClick="onRadioButtonClicked" android:text="@string/light_sensor"/>
        <RadioButton android:id="@+id/radio2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:onClick="onRadioButtonClicked" android:text="@string/accelerometer"/>
        <RadioButton android:id="@+id/radio3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:onClick="onRadioButtonClicked" android:text="@string/gyroscope"/>
        <RadioButton android:id="@+id/radio4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:onClick="onRadioButtonClicked" android:text="@string/magnetometer"/>
    </RadioGroup>
    <Button
            android:text="@string/connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonBtResume"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="135dp"
            app:layout_constraintLeft_toRightOf="@+id/textView2" android:layout_marginLeft="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintVertical_bias="0.006"
            android:layout_marginRight="8dp" app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.924"/>
    <ImageView
            android:layout_width="52dp"
            android:layout_height="49dp" app:srcCompat="@drawable/no"
            android:id="@+id/imageView" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" app:layout_constraintLeft_toRightOf="@+id/buttonOFF"
            android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="0.333"
            android:contentDescription="@string/img"/>

</android.support.constraint.ConstraintLayout>
